2010-05-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libblock/src/flashdisk.c, libblock/src/nvdisk.c:
	Cast argp to uintptr_t temporary instead of uint32_t temporary
	(Avoid incompatible pointer casts on 16bit targets).

2010-05-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* automake/compile.am: (Temporarily) Add -Werror=overflow,
	-Werror=pointer-to-int-cast, -Werror=int-to-pointer-cast.

2010-05-20	Bharath Suri <bharath.s.jois@gmail.com>

	* libcsupport/src/_rename_r.c: Avoid overwriting of errno by
	_rename_r to invalid values.

2010-05-18	Chris Johns <chrisj@rtems.org>

	* libblock/src/diskdevs.c, libblock/include/rtems/blkdev.h,
	libblock/src/bdbuf.c: PR 1448/filesystem.

	* libblock/include/rtems/blkdev.h, libblock/src/bdbuf.c: PR
	1514/filesystem.
	
2010-05-17	Oleg Kravtsov <Oleg.Kravtsov@oktetlabs.ru>

	PR 1449/cpukit
	* libblock/src/diskdevs.c: rtems_disk_next() will now implicitly
	obtain the returned disk.
	* libblock/include/rtems/diskdevs.h: Documentation.

2010-05-15	Chris Johns <chrisj@rtems.org>

	* libfs/src/imfs/imfs_initsupp.c, libfs/src/imfs/imfs.h,
	libfs/src/imfs/imfs_stat.c: PR1419. Return a device for the IMFS.

2010-05-14	Chris Johns <chrisj@rtems.org>

	* libblock/src/flashdisk.c: Clean up on initialisation errors.
	
2010-05-07	Arnout Vandecappelle <arnout@mind.be>

	PR 1511/networking
	* ftpd/ftpd.c: Abort RETR for directories.

2010-05-03	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* sapi/include/confdefs.h: New define CONFIGURE_SEMAPHORES for the
	overall count of required semaphores.  New define
	CONFIGURE_LIBBLOCK_SEMAPHORES for the count of required disk and bdbuf
	semaphores.

2010-05-01	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Add missing "&&".

2010-05-01	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/Makefile.am: Add libcsupport/src/flockfile.c,
	libcsupport/src/ftrylockfile.c, libcsupport/src/funlockfile.c.
	* libcsupport/src/flockfile.c, libcsupport/src/ftrylockfile.c,